force-app/main/default/objects/DRE__DTE_Data_Group__c/DRE__DTE_Data_Group__c.object-meta.xml
<CustomObject>
    <label>DTE Operation</label>
    <nameField>
        <displayFormat>DTEDTAG-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>