force-app/main/default/objects/DRE__DTE_Data_Group__c/fields/DRE__Object_Count__c.field-meta.xml
<CustomField>
    <fullName>DRE__Object_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Object Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>